2016-06-19  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/cifframe.m: Use sizeof(NSInteger) as the buffer size for
	small scalars if we are on an LP64 machine.
	* Source/NSOperation.m: Retain operation while taking it from queue,
	releasing after it is finished.  Prevent crash if the original owner
	of the operation releases it while it's in the queue.

2016-06-17  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSHTTPURLHandle.m:
	* Source/NSURLprotocol.m:
	When sending HTTP headers, use RFC2047 rules (as specified in HTTP/1.1
	RFC2616) to encode non-ascii characters.

2016-06-17  Niels Grewe <niels.grewe@halbordnung.de>

	* Headers/Foundation/NSRegularExpression.h
	* Source/NSRegularExpression.m
	* Tests/base/NSRegularExpression/basic.m:

	Implement resource limits for regular expression evaluation. Tweaked
	to roughly match the Cocoa behaviour, but can be changed through 
	the GSRegularExpressionWorkLimit user default.

2016-06-17  Niels Grewe <niels.grewe@halbordnung.de>

	* Source/NSRegularExpression.m: Implement -isEqual: and -hash
	* Tests/base/NSRegularExpression/basic.m: Test NSCopying

2016-06-14  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSSocketStream.m: Fix for failure of connect() call.
	* Source/GSStream.m: Fix event handling for failed streams.
	* Tests/NSURLConnection/test01.m: Add testcases, fix reset of delegate.
	Fixes for kfreebsd network stack being clever enough to fail the
	connect() call if the remote port is on the same machine and has
	no process listening on it.  Reported by Heintzmann

2016-06-08  Richard Frith-Macdonald <rfm@gnu.org>

	* Documentation/Base.gsdoc:
	* Documentation/ReleaseNotes.gsdoc:
	* Documentation/news.texi:
	Documentation/release notes preparation for next release.

	* Source/Makefile.postamble:
	* Source/NSBundle.m:
	* Source/NSPathUtilities.m:
	* Source/NSString.m:
	* Source/NSTask.m:
	* configure.ac:
	Changes to use the new multiarch path component cpu-host rather